@startuml


entity Groups {
    * Id: INT
    --
    * ClientId: INT
    * Name: VARCHAR
    * GroupId: VARCHAR
    * CreatedAt: DATETIME
}

entity Clients {
    * Id: INT
    --
    * Name: VARCHAR
    * CreatedAt: DATETIME
}

entity RequestTypes {
    * Id: INT
    --
    * Name: VARCHAR
    * CreatedAt: DATETIME
}

entity Requests {
    * Id: INT
    --
    * GroupId: INT
    * MessageId: INT
    * TypeId: INT
    * CreatedAt: DATETIME
    * Summary: TEXT
    Description: TEXT
    * status: VARCHAR
}

entity JiraTasks {
    * Id: INT
    --
    * RequestId: INT
    * JiraKey: VARCHAR
    * CreatedAt: DATETIME
    * ChangedAt: DATETIME
    * Status: VARCHAR
}

entity RequestStatusHistory {
    * Id: INT
    --
    * RequestId: INT
    * OldStatus: VARCHAR
    * NewStatus: VARCHAR
    * ChangedAt: DATETIME
}
entity Comments {
    * Id: INT
    --
    * RequestId: INT
    * MessageId: VARCHAR
    * CommentText: TEXT
    * CreatedAt: DATETIME
}
entity DutyOfficer {
    * Id: INT
    --
    * PhoneNumber: VARCHAR
    * DutyType: VARCHAR
    * CreatedAt: DATETIME
}


Groups ||--o{ Requests : "submits"
Clients ||--o{ Groups : "has"
RequestTypes ||--o{ Requests : "categorized as"
Requests ||--o| JiraTasks : "creates"
Requests ||--o{ RequestStatusHistory : "has"
Requests ||--o{ Comments : "has"

@enduml